# clearbits

./: .gitignore  CLAUDE.md  ClearBits.cpp  ClearBits.h  ClearBits.rc  ClearBits.sln  ClearBits.vcproj  ClearBits.vcxproj  ClearBits.vcxproj.filters  ClearBitsDlg.cpp  ClearBitsDlg.h  DibWnd.cpp  Filename.cpp  Filename.h  HyperLink.cpp  Options.cpp  Options.h  REG.CPP  REG.H  RESUME.md  ResFile.cpp  ResFile.h  SAMPBUF.CPP  SAMPBUF.h  SearchDlg.cpp  SearchDlg.h  SeekDlg.cpp  StdAfx.cpp  StdAfx.h  WINPLACE.CPP  WINPLACE.H  browsedlg.cpp  browsedlg.h  hyperlink.h  readme.md  resource.h
ClearBitsQt/: AppState.cpp  AppState.h  CMakeLists-explained.md  CMakeLists.txt  ClearBitsQt.qmlproject  ClearBitsQt.vcxproj  Main.qml  Screen01.qml  Screen01Form.ui.qml  cmake-build.ps1  main.cpp  qtquickcontrols2.conf
ClearBitsQt/ClearBitsDesign/: ClearBitsDesign.qrc  Constants.qml  qmldir
ClearBitsQt/ClearBitsDesign/designer/: plugin.metainfo
Dundas/: OXInteger.cpp
Layout/: Layout.c  Win95ADG.h
MFC/: ClearBitsDlg.cpp  DibWnd.h  SearchDlg.cpp  SeekDlg.h
MFC/Layout/: Layout.h  Win95ADG.h
MP3/: MCWaveReader.cpp  MCWaveReader.h  id3_int28.cpp  id3_int28.h
res/: ClearBits.exe.manifest  ClearBits.rc2
